# fastapi_backend

./: .cz.toml  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt
app/: debug.py  main.py
app/response_schemas/: schema.py
app/server/config/: config.py
app/server/database/: core_data.py  db.py
app/server/document/: meta_data.py
app/server/encoder/: json_encoder.py
app/server/handler/: error_handler.py
app/server/http_client/: http_client.py
app/server/logger/: custom_logger.py
app/server/middlewares/: exceptions.py  headers.py  request_gzip.py  tracker.py
app/server/models/: auth.py  core_data.py  custom_types.py  generic.py  model_validators.py  passport.py  users.py
app/server/routes/: auth_manager.py
app/server/services/: auth_manager.py
app/server/static/: collections.py  constants.py  enums.py  localization.py
app/server/templates/: account_details.html  email_otp.html  forgot_password.html  otp_templates.py
app/server/utils/: crypto_utils.py  date_utils.py  file_utils.py  image_utils.py  json_utils.py  mongo_utils.py  otp_utils.py  password_utils.py  query_utils.py  schema_loader.py  schema_util.py  template_util.py  token_util.py
docs/: file_storage_flow.wsd  licenses.md  performance.md
performance/: locustfile.py
